--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ api-version: 1.19
 description: networks plugin
 author: Quantum625
 database: true
-softdepend: [Vault]
+softdepend: [Vault, XConomy]
 commands:
    network:
     description: Base commmand for the Networks Plugin
