Added Telemetry antennas to upgrade your range

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -45,6 +45,41 @@ mode: CRAFT
 
 
 
+
+
+
+
+#                                   Craft-Mode related settings
+#                           These will be ignored when using ECONOMY mode
+
+#===========================================================================================================================
+
+# Defines the maximum range, items can be teleported for each level of range.
+
+# You can add more range upgrades to this list, but you NEED to also give them a crafting recipe to
+
+# Must start with 0!
+# Paste 2147483647 to enable interdimensional item transmission
+# Values Must be between 1 and 2147483647!
+
+range0: 25
+range1: 50
+range2: 100
+range3: 500
+range4: 2147483647 # This number means interdimensional item transmission is allowed
+
+#===========================================================================================================================
+
+
+
+
+
+
+
+
+
+
+
 #                                      Economy related settings
 #                               These will be ignored when using CRAFT mode
 
@@ -79,6 +114,6 @@ base_range: 40
 # Don't set this below the base_ value'
 
 max_container_limit: 200
-max_range: 400 # It doesn't make sense to have really far distances since chests inside unloaded chunks won't work anyway
+max_range: 500 # Note: Items won't be transmitted into unloaded chunks
 
 #===========================================================================================================================
