--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: Networks
-version: '1.1.4'
+version: '1.1.5'
 main: com.quantum625.networks.Main
 api-version: 1.19
-description: networks plugin
+description: Networks Plugin
 author: Quantum625
 database: true
 softdepend: [Vault, XConomy]
