Added a manual to the plugin

--- a/src/main/resources/features.conf
+++ b/src/main/resources/features.conf
@@ -1,1 +1,3 @@
-# Not yet used, will be implemented in a future update
+# Whether the Furnace component is available in the game or not
+# (Will remove the crafting recipe if set to false)
+furnace = true;
