Added a component upgrade, that lets you upgrade existing chests to components

--- a/src/main/resources/networks.conf
+++ b/src/main/resources/networks.conf
@@ -11,10 +11,16 @@ autoUpdate: true
 
 
 
-
 # Blocks that are allowed to be network containers
 # Only works for blocks that have inventories
 containerWhitelist= [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
+
+
+# Range upgrade base material
+material {
+  range="LIGHTNING_ROD"
+  component="ITEM_FRAME"
+}
 
 
 
