--- a/src/main/resources/recipes.conf
+++ b/src/main/resources/recipes.conf
@@ -1,5 +1,5 @@
 #  Crafting table shape
-#  Set the ingredient number to the item ID
+#  Set the  number to the item ID
 #    –––––––––––––
 #    | 1 | 2 | 3 |
 #    | 4 | 5 | 6 |
@@ -10,106 +10,118 @@
 # It means the block, the container is going to be
 # So for example you craft an Input Chest the same way as an Input Barrel, just that you switch out the chest with a barrel
 
-# Input Container
-input {
-  ingredient1=EMPTY
-  ingredient2="BASE_ITEM"
-  ingredient3=EMPTY
-  ingredient4=REDSTONE
-  ingredient5=HOPPER
-  ingredient6=REDSTONE
-  ingredient7=EMPTY
-  ingredient8=REDSTONE
-  ingredient9=EMPTY
+component {
+  input {
+    container: [
+      "EMPTY",
+      "BASE_ITEM",
+      "EMPTY",
+      "REDSTONE",
+      "HOPPER",
+      "REDSTONE",
+      "EMPTY",
+      "REDSTONE",
+      "EMPTY"
+    ]
+    upgrade: [
+      EMPTY
+      EMPTY
+      EMPTY
+      REDSTONE
+      HOPPER
+      REDSTONE
+      EMPTY
+      REDSTONE
+      EMPTY
+    ]
+  }
+
+  misc {
+    container: [
+      EMPTY
+      REDSTONE
+      EMPTY
+      REDSTONE
+      HOPPER
+      REDSTONE
+      EMPTY
+      "BASE_ITEM"
+      EMPTY
+    ]
+
+    upgrade: [
+      EMPTY
+      REDSTONE
+      EMPTY
+      REDSTONE
+      HOPPER
+      REDSTONE
+      EMPTY
+      EMPTY
+      EMPTY
+    ]
+  }
+  
+  sorting {
+    container: [
+      HOPPER
+      COMPARATOR
+      REDSTONE
+      HOPPER
+      EMPTY
+      REDSTONE
+      "BASE_ITEM"
+      "REDSTONE_TORCH"
+      REPEATER
+    ]
+
+    upgrade: [
+      HOPPER
+      COMPARATOR
+      REDSTONE
+      HOPPER
+      EMPTY
+      REDSTONE
+      EMPTY
+      "REDSTONE_TORCH"
+      REPEATER
+    ]
+  }
 }
 
-# Miscellaneous container
-misc {
-  ingredient1=EMPTY
-  ingredient2=REDSTONE
-  ingredient3=EMPTY
-  ingredient4=REDSTONE
-  ingredient5=HOPPER
-  ingredient6=REDSTONE
-  ingredient7=EMPTY
-  ingredient8="BASE_ITEM"
-  ingredient9=EMPTY
+upgrade {
+  range: [
+    [
+      "LAPIS_LAZULI", "ENDER_PEARL", "LAPIS_LAZULI"
+      "ENDER_PEARL", "DIAMOND", "ENDER_PEARL"
+      "LAPIS_LAZULI", "ENDER_PEARL", "LAPIS_LAZULI"
+    ],
+    [
+      "REDSTONE_BLOCK", "DIAMOND", "LAPIS_BLOCK"
+      "ENDER_EYE", "RAW_GOLD_BLOCK", "ENDER_EYE"
+      "LAPIS_BLOCK", "DIAMOND", "REDSTONE_BLOCK"
+    ],
+    [
+      "DIAMOND", "ENDER_EYE", "DIAMOND"
+      "NETHERITE_SCRAP", "NETHER_STAR", "NETHERITE_SCRAP"
+      "DIAMOND", "ENDER_EYE", "DIAMOND"
+    ],
+    [
+      "NETHER_STAR", "EXPERIENCE_BOTTLE", "NETHER_STAR"
+      "NETHERITE_INGOT", "DIAMOND_BLOCK", "NETHERITE_INGOT"
+      "NETHER_STAR", "EXPERIENCE_BOTTLE", "NETHER_STAR"
+    ]
+  ]
 }
 
-# Sorting Container
-sorting {
-  ingredient1=HOPPER
-  ingredient2=COMPARATOR
-  ingredient3=REDSTONE
-  ingredient4=HOPPER
-  ingredient5=EMPTY
-  ingredient6=REDSTONE
-  ingredient7="BASE_ITEM"
-  ingredient8="REDSTONE_TORCH"
-  ingredient9=REPEATER
-}
-
-# Range upgrade 1
-upgrade1 {
-  ingredient1="LAPIS_LAZULI"
-  ingredient2="ENDER_PEARL"
-  ingredient3="LAPIS_LAZULI"
-  ingredient4="ENDER_PEARL"
-  ingredient5=DIAMOND
-  ingredient6="ENDER_PEARL"
-  ingredient7="LAPIS_LAZULI"
-  ingredient8="ENDER_PEARL"
-  ingredient9="LAPIS_LAZULI"
-}
-
-# Range upgrade 2
-upgrade2 {
-  ingredient1="REDSTONE_BLOCK"
-  ingredient2=DIAMOND
-  ingredient3="LAPIS_BLOCK"
-  ingredient4="ENDER_EYE"
-  ingredient5="RAW_GOLD_BLOCK"
-  ingredient6="ENDER_EYE"
-  ingredient7="LAPIS_BLOCK"
-  ingredient8=DIAMOND
-  ingredient9="REDSTONE_BLOCK"
-}
-
-# Range upgrade 3
-upgrade3 {
-  ingredient1=DIAMOND
-  ingredient2="ENDER_EYE"
-  ingredient3=DIAMOND
-  ingredient4="NETHERITE_SCRAP"
-  ingredient5="NETHER_STAR"
-  ingredient6="NETHERITE_SCRAP"
-  ingredient7=DIAMOND
-  ingredient8="ENDER_EYE"
-  ingredient9=DIAMOND
-}
-
-# Range upgrade 4
-upgrade4 {
-  ingredient1="NETHER_STAR"
-  ingredient2="EXPERIENCE_BOTTLE"
-  ingredient3="NETHER_STAR"
-  ingredient4="NETHERITE_INGOT"
-  ingredient5="DIAMOND_BLOCK"
-  ingredient6="NETHERITE_INGOT"
-  ingredient7="NETHER_STAR"
-  ingredient8="EXPERIENCE_BOTTLE"
-  ingredient9="NETHER_STAR"
-}
-
-# Network wand
-wand {
-  ingredient1=EMPTY
-  ingredient2=REDSTONE
-  ingredient3="GLOWSTONE_DUST"
-  ingredient4=REDSTONE
-  ingredient5="BLAZE_ROD"
-  ingredient6=REDSTONE
-  ingredient7="GLOWSTONE_DUST"
-  ingredient8=REDSTONE
-  ingredient9=EMPTY
-}
+wand: [
+  EMPTY
+  REDSTONE
+  "GLOWSTONE_DUST"
+  REDSTONE
+  "BLAZE_ROD"
+  REDSTONE
+  "GLOWSTONE_DUST"
+  REDSTONE
+  EMPTY
+]
