Changes to the updater

--- a/src/main/resources/networks.conf
+++ b/src/main/resources/networks.conf
@@ -5,12 +5,6 @@ lang: en
 
 
 
-# Automatically install updates on launch
-autoUpdate: true
-
-
-
-
 # Blocks that are allowed to be network containers
 # Only works for blocks that have inventories
 containerWhitelist= [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
@@ -36,6 +30,9 @@ blastProofComponents: true
 notice: true
 
 
+
+# Show Networks text on launch
+logoOnLaunch: true
 
 
 # Defines the maximum range, items can be teleported for each level of range.
