--- a/src/main/resources/recipes.conf
+++ b/src/main/resources/recipes.conf
@@ -11,7 +11,7 @@
 # So for example you craft an Input Chest the same way as an Input Barrel, just that you switch out the chest with a barrel
 component {
   input {
-    container: [
+    block: [
       "EMPTY",
       "BASE_ITEM",
       "EMPTY",
@@ -36,7 +36,7 @@ component {
   }
 
   misc {
-    container: [
+    block: [
       EMPTY
       REDSTONE
       EMPTY
@@ -62,7 +62,7 @@ component {
   }
   
   sorting {
-    container: [
+    block: [
       HOPPER
       COMPARATOR
       REDSTONE
