Updated description in config file

--- a/src/main/resources/networks.conf
+++ b/src/main/resources/networks.conf
@@ -37,6 +37,7 @@ logoOnLaunch: true
 
 # Defines the maximum range, items can be teleported for each level of range.
 # You can add more range upgrades to this list, but you NEED to also give them a crafting recipe to
-# Paste 2147483647 to enable interdimensional item transmission
-# Values Must be between 1 and 2147483647!
-range = [25, 50, 100, 500, 2147483647]
+# Paste 2147483647 to enable infinte item transmission
+# Paste -1 to enable interdimensional item transmission
+# Values Must be integers between -1 and 2147483647 and NOT 0!
+range = [25, 50, 100, 500, -1]
