Fixed a relocation bug in 1.20.2

--- a/src/main/resources/networks.conf
+++ b/src/main/resources/networks.conf
@@ -7,7 +7,14 @@ lang: en
 
 # Blocks that are allowed to be network containers
 # Only works for blocks that have inventories
-containerWhitelist= [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
+containerWhitelist: [
+  "CHEST",
+  "TRAPPED_CHEST",
+  "BARREL",
+  "HOPPER",
+  "DISPENSER",
+  "DROPPER"
+]
 
 
 # Range upgrade base material
