--- a/src/main/resources/recipes.conf
+++ b/src/main/resources/recipes.conf
@@ -114,13 +114,13 @@ upgrade {
 }
 
 wand: [
-  EMPTY
-  REDSTONE
-  "GLOWSTONE_DUST"
-  REDSTONE
-  "BLAZE_ROD"
-  REDSTONE
-  "GLOWSTONE_DUST"
-  REDSTONE
-  EMPTY
+  "EMPTY",
+  "REDSTONE",
+  "GLOWSTONE_DUST",
+  "REDSTONE",
+  "BLAZE_ROD",
+  "REDSTONE",
+  "GLOWSTONE_DUST",
+  "REDSTONE",
+  "EMPTY"
 ]
