--- a/src/main/resources/networks.conf
+++ b/src/main/resources/networks.conf
@@ -3,6 +3,8 @@
 lang: en
 
 
+# Maximum number of networks a player can create
+maxNetworks: 5
 
 
 # Blocks that are allowed to be network containers
