--- a/src/main/resources/networks.conf
+++ b/src/main/resources/networks.conf
@@ -70,3 +70,10 @@ range = [25, 50, 100, 500, -1]
 
 # The maximum amount of networks a player can own
 maxNetworks = 5
+
+# Force the plugin into folia mode, even when it's running paper
+# IT IS NOT NECESSARY TO ENABLE THIS WHEN USING FOLIA!
+# The plugin AUTOMATICALLY switches to Folia Mode when running Folia!
+# Do not enable this option unless you really know what you are doing!
+# Only for development purpose, this might later be removed from the plugin
+forceFolia = false
