Changed some default settings

--- a/src/main/resources/networks.conf
+++ b/src/main/resources/networks.conf
@@ -1,6 +1,6 @@
 # The language file in /lang that is used
 # Do not add the .yml, Only the language id
-lang: en
+lang = en
 
 
 
@@ -9,12 +9,12 @@ lang: en
 # Only works for blocks that have inventories
 component {
   input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
-  filtered_input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
-  nbt_filtered_input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
+  #filtered_input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
+  #nbt_filtered_input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
   sorting = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
-  nbt_sorting = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
+  #nbt_sorting = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
   misc = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
-  furnace = [ "furnace", "blast_furnace", "smoke_furnace" ]
+  #furnace = [ "furnace", "blast_furnace", "smoke_furnace" ]
 }
 
 
@@ -35,7 +35,7 @@ properties {
 
 
 # Disables explosion damage on network components
-blastProofComponents: true
+blastProofComponents = true
 
 
 
@@ -43,29 +43,30 @@ blastProofComponents: true
 # Notices players, that open full chests to this plugin.
 # This message will only be sent once and just to players, that do not have a network.
 # You can configure the message in the language file.
-notice: true
+notice = true
 
 
 
 # Show Networks text on launch
-logoOnLaunch: true
+logoOnLaunch = true
 
 # Stores networks in human readable format
 # May take up a litte bit more storage space
-humanReadableJson: false
+humanReadableJson = false
 
 
 # Stores deleted networks in an archive folder
 # Can be abused by players to fill storage space
-archiveNetworksOnDelete: false
+archiveNetworksOnDelete = false
 
 
 # Defines the maximum range, items can be teleported for each level of range.
+# This value is added to the base range property of the network
 # You can add more range upgrades to this list, but you NEED to also give them a crafting recipe to
 # Paste 2147483647 to enable infinte item transmission
 # Paste -1 to enable interdimensional item transmission
-# Values Must be integers between -1 and 2147483647 and NOT 0!
-range = [25, 50, 100, 500, -1]
+# Values Must be integers between -1 and 2147483647
+range = [0, 50, 100, 200, 500, -1]
 
 
 # The maximum amount of networks a player can own
