--- a/src/main/resources/recipes.conf
+++ b/src/main/resources/recipes.conf
@@ -91,24 +91,29 @@ component {
 upgrade {
   range: [
     [
-      "LAPIS_LAZULI", "ENDER_PEARL", "LAPIS_LAZULI"
-      "ENDER_PEARL", "DIAMOND", "ENDER_PEARL"
-      "LAPIS_LAZULI", "ENDER_PEARL", "LAPIS_LAZULI"
+      "EMPTY", "REDSTONE", "EMPTY"
+      "REDSTONE", "LIGHTNING_ROD", "REDSTONE"
+      "EMPTY", "REDSTONE", "EMPTY"
     ],
     [
-      "REDSTONE_BLOCK", "DIAMOND", "LAPIS_BLOCK"
-      "ENDER_EYE", "RAW_GOLD_BLOCK", "ENDER_EYE"
-      "LAPIS_BLOCK", "DIAMOND", "REDSTONE_BLOCK"
+      "REDSTONE_BLOCK", "LIGHTNING_ROD", "REDSTONE_BLOCK"
+      "GOLD_INGOT", "LIGHTNING_ROD", "GOLD_INGOT"
+      "REDSTONE_BLOCK", "LIGHTNING_ROD", "REDSTONE_BLOCK"
     ],
     [
-      "DIAMOND", "ENDER_EYE", "DIAMOND"
-      "NETHERITE_SCRAP", "NETHER_STAR", "NETHERITE_SCRAP"
-      "DIAMOND", "ENDER_EYE", "DIAMOND"
+      "ENDER_PEARL", "COPPER_BLOCK", "ENDER_PEARL"
+      "GOLD_BLOCK", "COPPER_BLOCK", "GOLD_BLOCK"
+      "REDSTONE_BLOCK", "COPPER_BLOCK", "REDSTONE_BLOCK"
     ],
     [
-      "NETHER_STAR", "EXPERIENCE_BOTTLE", "NETHER_STAR"
-      "NETHERITE_INGOT", "DIAMOND_BLOCK", "NETHERITE_INGOT"
-      "NETHER_STAR", "EXPERIENCE_BOTTLE", "NETHER_STAR"
+      "ENDER_PEARL", "GOLD_BLOCK", "ENDER_PEARL"
+      "SCULK", "COPPER_BLOCK", "SCULK"
+      "SCULK", "COPPER_BLOCK", "SCULK"
+    ],
+    [
+      "ENDER_EYE", "ENDER_EYE", "ENDER_EYE"
+      "AMETHYST_SHARD", "ECHO_SHARD", "AMETHYST_SHARD"
+      "NETHERITE_SCRAP", "DIAMOND", "NETHERITE_SCRAP"
     ]
   ]
 }
