Updated discord link

--- a/src/main/resources/manuals/main/de.yml
+++ b/src/main/resources/manuals/main/de.yml
@@ -6,7 +6,7 @@ pages:
   \n
 Networks ist ein Plugin, mit dem du deine Kisten zu vollautomatischen Lagersystemen verbinden kannst.\n
 Es gibt Einfüllkisten, Sortierkisten und Restekisten.\n\n
-<blue><click:open_url:https://discord.gg/wQXKdtVPMd>[Discord]</click></blue> <green><click:open_url:https://modrinth.com/plugin/networks>[Modrinth]</click></green>"
+<blue><click:open_url:https://discord.gg/Q65TqRwnce>[Discord]</click></blue> <green><click:open_url:https://modrinth.com/plugin/networks>[Modrinth]</click></green>"
 
   - "
 Alle items, die in eine Einfüllkiste gelegt werden, werden in ihre jeweiligen Sortierkisten gelegt oder in eine Restekiste.\n\n
