Added the option to check for inventory spacqe with a more complex algorithm

--- a/src/main/resources/general.conf
+++ b/src/main/resources/general.conf
@@ -17,6 +17,15 @@ component {
   #furnace = [ "furnace", "blast_furnace", "smoke_furnace" ]
 }
 
+# Performance related options
+# Changing these can impact your server's performance negatively in some cases
+performance {
+  # This option is experimental, use with caution
+  # FALSE:  Only checks if said inventory has a free slot (better for performance) [DEFAULT]
+  # TRUE:   Checks whether the stack, that's to fill in, can be spreaded to partially filled slots with the same item type
+  complexInventoryChecks = false
+}
+
 
 # Range upgrade base material
 material {
