Added the option to not load chunks when transferring items

--- a/src/main/resources/general.conf
+++ b/src/main/resources/general.conf
@@ -24,6 +24,11 @@ performance {
   # FALSE:  Only checks if said inventory has a free slot (better for performance) [DEFAULT]
   # TRUE:   Checks whether the stack, that's to fill in, can be spreaded to partially filled slots with the same item type
   complexInventoryChecks = false
+
+  # Load chunks of connected network components
+  # Guarantees that items can be transmitted as far as you want
+  # May SIGNIFICANTLY reduce your server's performance on LARGE servers! Use with caution
+  loadChunks = false
 }
 
 
