Added the option to define custom command aliases

--- a/src/main/resources/general.conf
+++ b/src/main/resources/general.conf
@@ -2,8 +2,9 @@
 # Do not add the .yml, Only the language id
 lang = en
 
-
-
+# Command aliases
+# Alternative /-commands for /networks
+commands = [ "n" "net" "network" ]
 
 # Blocks that are allowed to be network containers
 # Only works for blocks that have inventories
