Fixed the incorrect default setting for the networks command aliases

--- a/src/main/resources/general.conf
+++ b/src/main/resources/general.conf
@@ -4,7 +4,7 @@ lang = en
 
 # Command aliases
 # Alternative /-commands for /networks
-commands = [ "n" "net" "network" ]
+commands = [ "n", "net", "network" ]
 
 # Blocks that are allowed to be network containers
 # Only works for blocks that have inventories
