Improved component items and property handling

--- a/src/main/resources/general.conf
+++ b/src/main/resources/general.conf
@@ -53,13 +53,14 @@ properties {
 blastProofComponents = true
 
 
+# Add component properties to the item lore of the component
+propertyLore = true
 
 
 # Notices players, that open full chests to this plugin.
 # This message will only be sent once and just to players, that do not have a network.
 # You can configure the message in the language file.
 notice = true
-
 
 
 # Show Networks text on launch
