--- a/src/main/resources/recipes.conf
+++ b/src/main/resources/recipes.conf
@@ -1,5 +1,5 @@
 #  Crafting table shape
-#  Set the  number to the item ID
+#  Set the number to the item ID
 #    –––––––––––––
 #    | 1 | 2 | 3 |
 #    | 4 | 5 | 6 |
@@ -7,85 +7,41 @@
 #    –––––––––––––
 # EMPTY means an empty slot
 # BASE_ITEM is only available for the containers
-# It means the block, the container is going to be
-# So for example you craft an Input Chest the same way as an Input Barrel, just that you switch out the chest with a barrel
+# It means the base item of the container upgrade you craft
 component {
-  input {
-    block: [
-      "EMPTY",
-      "BASE_ITEM",
-      "EMPTY",
-      "REDSTONE",
-      "HOPPER",
-      "REDSTONE",
-      "EMPTY",
-      "REDSTONE",
-      "EMPTY"
-    ]
-    upgrade: [
-      EMPTY
-      EMPTY
-      EMPTY
-      REDSTONE
-      HOPPER
-      REDSTONE
-      EMPTY
-      REDSTONE
-      EMPTY
-    ]
-  }
-
-  misc {
-    block: [
-      EMPTY
-      REDSTONE
-      EMPTY
-      REDSTONE
-      HOPPER
-      REDSTONE
-      EMPTY
-      "BASE_ITEM"
-      EMPTY
-    ]
-
-    upgrade: [
-      EMPTY
-      REDSTONE
-      EMPTY
-      REDSTONE
-      HOPPER
-      REDSTONE
-      EMPTY
-      EMPTY
-      EMPTY
-    ]
-  }
-  
-  sorting {
-    block: [
-      HOPPER
-      COMPARATOR
-      REDSTONE
-      HOPPER
-      EMPTY
-      REDSTONE
-      "BASE_ITEM"
-      "REDSTONE_TORCH"
-      REPEATER
-    ]
-
-    upgrade: [
-      HOPPER
-      COMPARATOR
-      REDSTONE
-      HOPPER
-      EMPTY
-      REDSTONE
-      EMPTY
-      "REDSTONE_TORCH"
-      REPEATER
-    ]
-  }
+  input: [
+    "EMPTY",
+    "BASE_ITEM",
+    "EMPTY",
+    "REDSTONE",
+    "HOPPER",
+    "REDSTONE",
+    "EMPTY",
+    "REDSTONE",
+    "EMPTY"
+  ]
+  misc: [
+    EMPTY
+    REDSTONE
+    EMPTY
+    REDSTONE
+    HOPPER
+    REDSTONE
+    EMPTY
+    "BASE_ITEM"
+    EMPTY
+  ]
+  sorting: [
+    HOPPER
+    COMPARATOR
+    REDSTONE
+    HOPPER
+    EMPTY
+    REDSTONE
+    "BASE_ITEM"
+    "REDSTONE_TORCH"
+    REPEATER
+  ]
 }
 
 upgrade {
