--- a/src/main/resources/general.conf
+++ b/src/main/resources/general.conf
@@ -10,13 +10,14 @@ commands = [ "n", "net", "network" ]
 # Only works for blocks that have inventories
 component {
   input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
-  #filtered_input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
-  #nbt_filtered_input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
   sorting = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
-  #nbt_sorting = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
   misc = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
   #furnace = [ "furnace", "blast_furnace", "smoke_furnace" ]
 }
+
+# Auto-save interval in seconds
+# Set to 0 to disable auto save
+autoSave = 120
 
 # Performance related options
 # Changing these can impact your server's performance negatively in some cases
@@ -29,6 +30,7 @@ performance {
   # Load chunks of connected network components
   # Guarantees that items can be transmitted as far as you want
   # May SIGNIFICANTLY reduce your server's performance on LARGE servers! Use with caution
+  # On Folia servers this does not always work since item transmission must happen within one tick region
   loadChunks = false
 }
 
@@ -41,7 +43,6 @@ material {
 
 
 # Default properties for networks
-
 properties {
   baseRange = 20
   maxComponents = -1
