--- a/src/main/resources/general.conf
+++ b/src/main/resources/general.conf
@@ -12,7 +12,6 @@ component {
   input = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
   sorting = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
   misc = [ "CHEST", "TRAPPED_CHEST", "BARREL", "HOPPER", "DISPENSER", "DROPPER" ]
-  #furnace = [ "furnace", "blast_furnace", "smoke_furnace" ]
 }
 
 # Auto-save interval in seconds
@@ -85,6 +84,8 @@ archiveNetworksOnDelete = false
 # Values Must be integers between -1 and 2147483647
 range = [0, 50, 100, 200, 500, -1]
 
+# Whether range upgrades are per component or per network
+rangePerNetwork = false
 
 # The maximum amount of networks a player can own
 maxNetworks = 5
